# --------------------------------------------------------------------------
# @@COPYRIGHT@@
# --------------------------------------------------------------------------

include(CMLTestMacros)

add_subdirectory(main)
add_subdirectory(common)
add_subdirectory(storage)
add_subdirectory(vector)
add_subdirectory(matrix)
add_subdirectory(quaternion)
add_subdirectory(mathlib)
add_subdirectory(util)